Initial implementation of forms to populare operation parameters

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <app-component>
           </app-component>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-7">
           <div class="card card-success card-inverse">
             <div class="card-header">
               Workflow
@@ -50,18 +50,15 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-        <div style="text-align: left">
-          <small><pre><code class="python"></code></pre></small>
-        </div>
-              <textarea class="form-control" style="font-size:8pt" rows="10"></textarea>
+      <div class="col-md-3">
+        
         <div class="card card-inverse card-warning ">
           <div class="card-header">
             Properties (Right now, just a placehoder :) )
           </div>
-          <div class="card-text">
+          <div class="card-text ">
 
-            <div id="properties-form" style="border:5px solid #555; height: 400px; width: 100%">
+            <div id="properties-form" class="container" style="padding: 20px;height: 400px; width: 100%">
             </div>
             <div>
               <!--
@@ -77,6 +74,10 @@
                 {"nodes":[{"left":202,"top":25,"id":"5f905c30-d3a1-4c47-ab41-2f2387007fe8","operationId":"18","title":"Data reader","type":"data-source","zIndex":10},{"left":201,"top":171,"id":"3e9e75d1-2a5c-4ce3-ab37-1999ca083fcb","operationId":"7","title":"Transformation","type":"operation","zIndex":11},{"left":200,"top":297,"id":"2bd537fd-4e60-451b-b48e-7c4ee5c8fa0d","operationId":"7","title":"Transformation","type":"operation","zIndex":12},{"left":200,"top":432,"id":"db305e4b-1611-422e-8518-0a6cc828c9dc","operationId":"5","title":"Filter (selection)","type":"operation","zIndex":13},{"left":132,"top":563,"id":"59640f04-e099-4394-989e-d35757168f6b","operationId":"17","title":"Split dataset","type":"operation","zIndex":14},{"left":382,"top":523,"id":"7819ee99-6e9d-4ec6-92bf-33b3dfad2092","operationId":"4","title":"Naive Bayes Classifier","type":"operation","zIndex":15},{"left":136,"top":804,"id":"ad5a0ffb-a0ab-45cd-8cb4-55fc0352c0c4","operationId":"19","title":"Evaluate model","type":"operation","zIndex":16},{"left":345,"top":701,"id":"196cd98d-05df-4ae4-bffd-2d9d9cbc5b47","operationId":"1","title":"Train and apply classification model","type":"operation","zIndex":17},{"left":352,"top":892,"id":"fd89674a-1287-4007-a3e6-50a66a0cbdc7","operationId":"20","title":"Publishes a workflow as a web service","type":"operation","zIndex":18}],"edges":[{"source-uuid":"5f905c30-d3a1-4c47-ab41-2f2387007fe8/35","target-uuid":"3e9e75d1-2a5c-4ce3-ab37-1999ca083fcb/29"},{"source-uuid":"3e9e75d1-2a5c-4ce3-ab37-1999ca083fcb/30","target-uuid":"2bd537fd-4e60-451b-b48e-7c4ee5c8fa0d/29"},{"source-uuid":"2bd537fd-4e60-451b-b48e-7c4ee5c8fa0d/30","target-uuid":"db305e4b-1611-422e-8518-0a6cc828c9dc/1"},{"source-uuid":"db305e4b-1611-422e-8518-0a6cc828c9dc/2","target-uuid":"59640f04-e099-4394-989e-d35757168f6b/26"},{"source-uuid":"59640f04-e099-4394-989e-d35757168f6b/27","target-uuid":"ad5a0ffb-a0ab-45cd-8cb4-55fc0352c0c4/36"},{"source-uuid":"59640f04-e099-4394-989e-d35757168f6b/28","target-uuid":"196cd98d-05df-4ae4-bffd-2d9d9cbc5b47/19"},{"source-uuid":"7819ee99-6e9d-4ec6-92bf-33b3dfad2092/21","target-uuid":"196cd98d-05df-4ae4-bffd-2d9d9cbc5b47/18"},{"source-uuid":"196cd98d-05df-4ae4-bffd-2d9d9cbc5b47/20","target-uuid":"ad5a0ffb-a0ab-45cd-8cb4-55fc0352c0c4/37"},{"source-uuid":"196cd98d-05df-4ae4-bffd-2d9d9cbc5b47/20","target-uuid":"fd89674a-1287-4007-a3e6-50a66a0cbdc7/40"}]}
               </pre>
             </div>
+            <div style="text-align: left">
+              <small><pre><code class="python"></code></pre></small>
+            </div>
+            <textarea class="form-control" style="font-size:8pt" rows="10"></textarea>
           </div>
         </div>
       </div>
