Implementing listing of workflows, fixes in editor
- Sorting (Ascending / descending)
- Fixes in modal and expression properties editor

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </li>
                 </ul>
                 <ul class="nav navbar-nav  pull-right">
-                <!--
+                    <!--
                     <li class="nav-item" :class="{hide: language === 'en'}">
                         <a class="nav-link" href="#" @click="changeLanguage('en')">English version</a>
                     </li>
@@ -38,11 +38,12 @@
                     </li>
                 -->
                     <router-link to="/workflows/editor">Go to Editor</router-link>
-                    
+
                 </ul>
             </nav>
         </div>
         <router-view></router-view>
+        <vue-progress-bar></vue-progress-bar>
     </div>
     <script src="bundle.js"></script>
 </body>
@@ -50,4 +51,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js"></script>
 -->
+
 </html>
