Implementation of job listing

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div id="app">
+        <vue-toastr ref="toastr"></vue-toastr>
         <!--app-component></app-component -->
         <div>
             <nav class="navbar navbar-fixed-top navbar-inverse">
