--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <router-link to="/jobs/list" active-class="active">Jobs</router-link>
                     </li>
                     <li class="nav-item">
-                        <router-link to="/data-sources/list" active-class="active">Data sources</router-link>
+                        <router-link to="/data-source/list" active-class="active">Data sources</router-link>
                     </li>
                 </ul>
             </nav>
