--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </ul>
             </nav>
         </div>
-        <router-view></router-view>
+        <router-view :key="$route.params.id"></router-view>
         <vue-progress-bar></vue-progress-bar>
         <transition name="overlay-fade">
             <div class="page-overlay">
