Improvements in the interface
- tests with nested operation categories
- fixes in the css files
- support for widget "code"

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <a class="navbar-brand" href="#">Lemonade Citron</a>
                 <ul class="nav navbar-nav">
                     <li class="nav-item active">
-                        <router-link to="/workflows/list" active-class="active">Workflows</router-link>
+                        <router-link to="/workflows/list" active-class="active"><span class="fa fa-flask"></span> Workflows</router-link>
                     </li>
                     <li class="nav-item">
-                        <router-link to="/jobs/list" active-class="active">Jobs</router-link>
+                        <router-link to="/jobs/list" active-class="active"><span class="fa fa-tasks"></span> Jobs</router-link>
                     </li>
                     <li class="nav-item">
                         <router-link to="/data-source/list" active-class="active">Data sources</router-link>
