--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="public/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Lato', Verdana, Geneva, Tahoma, sans-serif;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -26,7 +32,7 @@
                         <router-link to="/jobs/list" active-class="active"><span class="fa fa-tasks"></span> Jobs</router-link>
                     </li>
                     <li class="nav-item">
-                        <router-link to="/data-source/list" active-class="active">Data sources</router-link>
+                        <router-link to="/data-source/list" active-class="active"><span class="fa fa-database"></span> Data sources</router-link>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
