Lots of changes

--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
 <body>
     <div id="app">
         <vue-toastr ref="toastr"></vue-toastr>
-        <!--app-component></app-component -->
         <div>
             <nav class="navbar navbar-fixed-top navbar-inverse">
                 <div class="navbar-brand logo"><img/></div>
-                <a class="navbar-brand" href="#">Lemonade Citron</a>
+                <a class="navbar-brand" href="#">{{name}}</a>
                 <ul class="nav navbar-nav">
                     <li class="nav-item active">
                         <router-link to="/workflows/list" active-class="active"><span class="fa fa-flask"></span> Workflows</router-link>
@@ -37,34 +36,34 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <user-card label="User information">
-                            <li>
-                                <div class="navbar-login">
-                                    <div class="row">
-                                        <div class="col-lg-4">
-                                            <p class="text-center">
-                                                <span class="glyphicon glyphicon-user icon-size"></span>
-                                            </p>
-                                        </div>
-                                        <div class="col-lg-8">
-                                            <p class="text-left"><strong>Salman Khan</strong></p>
-                                            <p class="text-left small">crazytodevelop@@gmail.com</p>
-                                            <p class="text-left">
-                                                <a href="#" class="btn btn-primary btn-block btn-sm">Profile</a>
-                                            </p>
-                                        </div>
+                        <li>
+                            <div class="navbar-login">
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <p class="text-center">
+                                            <span class="glyphicon glyphicon-user icon-size"></span>
+                                        </p>
+                                    </div>
+                                    <div class="col-lg-8">
+                                        <p class="text-left"><strong>Salman Khan</strong></p>
+                                        <p class="text-left small">crazytodevelop@@gmail.com</p>
+                                        <p class="text-left">
+                                            <a href="#" class="btn btn-primary btn-block btn-sm">Profile</a>
+                                        </p>
                                     </div>
                                 </div>
-                            </li>
-                            <li class="divider navbar-login-session-bg"></li>
-                            <li><a href="#">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">User stats <span class="glyphicon glyphicon-stats pull-right"></span></a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Messages <span class="badge pull-right"> 42 </span></a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Favourites Snippets <span class="glyphicon glyphicon-heart pull-right"></span></a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
+                            </div>
+                        </li>
+                        <li class="divider navbar-login-session-bg"></li>
+                        <li><a href="#">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">User stats <span class="glyphicon glyphicon-stats pull-right"></span></a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Messages <span class="badge pull-right"> 42 </span></a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Favourites Snippets <span class="glyphicon glyphicon-heart pull-right"></span></a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
                     </user-card>
                 </ul>
             </nav>
@@ -80,9 +79,4 @@
     </div>
     <script src="bundle.js"></script>
 </body>
-<!--
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js"></script>
--->
-
 </html>
