--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                         <router-link to="/privacy-policy/list" active-class="active"><span class="fa fa-lock"></span> Privacy policies</router-link>
                     </li>
                 </dropdown-menu>
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">
+                        <router-link to="/dashboards/list" active-class="active"><span class="fa fa-dashboard"></span> Visualization dashboards</router-link>
+                    </li>
+                </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <user-card label="User information">
                         <li>
