--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </dropdown-menu>
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <router-link to="/dashboards/list" active-class="active"><span class="fa fa-dashboard"></span> Visualization dashboards</router-link>
+                        <router-link to="/dashboards/list" active-class="active"><span class="fa fa-dashboard"></span> Dashboards</router-link>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
